Refuse what an order decides where many elements meet, and let carriers hold their own order
The reading treated a destination or a call name as proof that a walk's order
does not matter. Where many elements meet in one place, only the operation's
own promise settles that: an element leaving a walk, a value under a shared
key, a merge, a sort that ties. The realization a search hands back now holds
its demands in the terms' own order, and a pair of classes has one order that
every reader takes from it.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>